# adk-multi-custom-agent

./: .env.example  ADK_DEBUG_GUIDE.md  ADK_WEB_UI_README.md  ARCHITECTURE_DESIGN.md  DESIGN_RESULT.md  DEVELOPMENT_PLAN.md  README.md  TEST_PLAN.md  TEST_REPORT.json  TEST_REPORT_INITIAL.md  TEST_RESULT_LOCAL.md  app.py  config.py  debug_test.py  debug_test_v2.py  mock_ingestion_server.py  pyproject.toml  requirements.txt  test_adk_workflow.py  test_agent_tool_mode.py  test_hierarchy.py  test_session.py
adk_agents/: sub_agent_factory.py
adk_cli_view/: __init__.py  agent.py
adk_web_ui/: .env.example  MIGRATION.md  PHASE2_PLAN.md  TEST_REPORT.md  __init__.py  admin.html  config.py  database.py  index.html  index_db.html  index_v2.html  models.py  schema.sql  schema_v2.sql  server.py  server_cli.py  server_db.py  server_db_v2.py  server_debug.py  server_debug_v2.py  server_fixed.py  server_mock.py  server_sqlite.py  server_v2.py  test_admin_api.py
backend/: config.py  main.py
chatbots/: bot_tech.json  chatbot-company.json  chatbot-hr-benefit.json  chatbot-hr-policy.json  chatbot-hr.json  chatbot-rtl-synthesis.json  chatbot-rtl-verilog.json  chatbot-tech-backend.json  chatbot-tech-devops.json  chatbot-tech-frontend.json  chatbot-tech.json  chatbot_a.json  chatbot_b.json  chatbot_c.json  chatbot_company.json  chatbot_d.json  chatbot_hr.json  chatbot_hr_benefit.json  chatbot_hr_policy.json  chatbot_rtl_synthesis.json  chatbot_rtl_verilog.json  chatbot_tech.json  chatbot_tech_backend.json  chatbot_tech_devops.json  chatbot_tech_frontend.json  hierarchy-test-7e03ab01.json  (+8 more)
(+80 files in other folders)
